# poolarize

./: .bunrc  .gitignore  .prettierignore  LICENSE  README.md  package.json  playwright.config.js  pnpm-lock.yaml
app/: .gitignore  README.md  components.json  index.html  package.json  playwright.config.js  pnpm-lock.yaml  vite.config.ts
app/playwright-tests/storage-states/: admin-connected.json  wallet-connected.json  wallet-not-connected.json
app/src/: config.ts  input.css  main.tsx  routeTree.gen.ts
app/src/components/: Gregor Mitscha-Baude Private Crednetials meet notes.md  PoolDashboard.tsx  PoolFactory.tsx  PoolList.tsx  header.tsx  liquidittyFeature.tsx  sign-in.tsx  swapFeature.tsx  swapper.tsx
app/src/contexts/: near.tsx
app/src/lib/: guestbook.ts  hooks.ts  queries.ts
app/src/routes/: __root.tsx  index.tsx  login.tsx
contracts/: .gitignore  Cargo.toml  Makefile
contracts/generic-nep-141-token-contract/: Cargo.toml
contracts/generic-nep-141-token-contract/src/: lib.rs
contracts/poolarize/: Cargo.toml
contracts/poolarize/src/: deposit.rs  internal.rs  lib.rs  oracle.rs  pool_info.rs  withdraw.rs
contracts/poolarize/src/util/: constants.rs  interface.rs  mod.rs
contracts/scripts/: OLDintegration-test.sh  integration-tests.sh
contracts/scripts/deploy/: testnet-deploy.sh
frontend/: README.md  index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: AddLiquidityModal.tsx  Footer.tsx  Logo.tsx  Navbar.tsx  PoolCard.tsx  StatCard.tsx  SwapCard.tsx  TokenLogo.tsx  TokenPair.tsx  VirtualPoolCard.tsx
frontend/src/contexts/: near.tsx
frontend/src/models/: pool.ts
frontend/src/pages/: About.tsx  CreatePool.tsx  Index.tsx  Pools.tsx  (+1 more)
(+9 files in other folders)
