[package]
name = "generic-nep-141-token-contract"
version = "0.1.0"
edition = "2018"
authors = ["Manza <manza@poolmate.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
